@@ -92,7 +92,7 @@ fact n/*0:1*/::bigint = 1;
   state 2: #1 #2
 }
 fact 50;
-30414093201713378043612608166064768844377641568960512000000000000G
+30414093201713378043612608166064768844377641568960512000000000000L
 fib1 0 = 0;
 fib1 1 = 1;
 fib1 n/*0:1*/ = fib1 (n/*0:1*/-2)+fib1 (n/*0:1*/-1) if n/*0:1*/>1;
